--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <h1>Simple Omelette Recipe</h1>
     </div>
     <p>
-        <h1>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</h1>
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
     </p>
     <div>
-        <h3>Preparation time</h3>
+        <h2>Preparation time</h2>
         <ul>
             <li>Total: Approximately 10 minutes</li>
             <li>Preparation: 5 minutes</li>
             <li>Cooking: 5 minutes</li>
     </div>
     <div>
-        <h4>Ingredients</h4>
+        <h2>Ingredients</h2>
         <ul>
             <li>2-3 large eggs</li>
             <li>Salt, to taste</li>
@@ -34,8 +34,9 @@
         </ul>
 
     </div>
+    <hr />
     <div>
-        <h5>Instructions</h5>
+        <h2>Instructions</h2>
         <ol>
             <li> <span style="font-weight: 700;">Beat the eggs:</span>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
             <li><span style="font-weight: 700;">Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.</li>
@@ -45,15 +46,27 @@
             <li><span style="font-weight: 700;">Enjoy:</span>Serve hot, with additional salt and pepper if needed.</li>
         </ol>
     </div>
-    <h4>Nutrition</h4>
+    <hr />
+    <h2>Nutrition</h2>
     <p>The table below shows nutritional values per serving without the additional fillings.</p>
-    <table border="1
-">
+    <table style="width: 20%;">
         <tr>
-            <td>Calories</td>
+            <td> Calories</td>
+            <td>277kcal</td>
+        </tr>
+        <tr>
+        
             <td>Carbs</td>
+            <td>0g</td>
+
+        </tr>
+        <tr>
             <td>Protein</td>
+            <td>20g</td>
+        </tr>
+        <tr>
             <td>Fat</td>
+            <td>22g</td>
         </tr>
     </table>
   </body>
